# shared_json_server

./: README.md  pyproject.toml  setup.py
shared_json_server/: __main__.py  config.py  json_schema_def.py  json_schema_manage.py  server_main.py  shared_data_manager.py  shared_json_server.py
