[build-system]
requires = ["setuptools"]

[project]
name = "shared_json_server"
description = "shared json server"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "2024.8.16"
dependencies = [
    "cbpyjsonrpc @ git+https://github.com/city-bridge/cbpyjsonrpc.git"
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

